Bond Cleaning new Site desktop / mobile header css/js updated!

--- a/contact-us.html
+++ b/contact-us.html
@@ -228,6 +228,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
     <!-- JS scripts -->
+     <script></script>
 </body>
 
 </html>
