--- a/home.html
+++ b/home.html
@@ -912,7 +912,7 @@
     <!-- slider script link  -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
-    <!-- JS scripts -->
+    <!-- JavaScript scripts -->
     <script>
         $(document).ready(function () {
             $('.bcx-review-slider').slick({
