--- a/home.html
+++ b/home.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | New Cleaning Site</title>
+    <!-- slider style link  -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+    <!-- bootstrap or css links  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href='https://fonts.googleapis.com/css?family=Inter|Oswald|Nunito Sans' rel='stylesheet'>
@@ -71,10 +73,10 @@
                     solutions in Brisbane. QLD. Our expertise is in cleaning rental properties, homes, offices, oven and
                     BBQ, and carpets using safe and sound products. Feel free to call us and book our cleaning service
                     in the city and its suburbs at the best price.</p>
-                    <div class="hero-more-info info-mob">
-                        <span><img src="./assets/images/check-circle.png" alt="">Trusted since 1999</span>
-                        <span><img src="./assets/images/check-circle.png" alt="">2500+ satisfied customers</span>
-                    </div>
+                <div class="hero-more-info info-mob">
+                    <span><img src="./assets/images/check-circle.png" alt="">Trusted since 1999</span>
+                    <span><img src="./assets/images/check-circle.png" alt="">2500+ satisfied customers</span>
+                </div>
                 <div class="hero-btns">
                     <a href="#" class="boot-btn">Book Service</a>
                     <a href="#" class="call-btn"><img src="./assets/images/call-i.png" alt="">Call Now</a>
@@ -904,11 +906,13 @@
     </div>
     <!-- footer end -->
 
-    <!-- scripts -->
+    <!-- bootstrap and jquery scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- slider script link  -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
+    <!-- JS scripts -->
     <script>
         $(document).ready(function () {
             $('.bcx-review-slider').slick({
